--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="box">
-      THE
+      <b>THE</b><br>
       <div class="word">
         <span>adapt</span>
         <span>explor</span>
@@ -15,7 +15,9 @@
         <span>applic</span>
         <span>reli</span>
       </div>
-      ABILITY LAB
+      <b>ABILITY</b>
+      <br>
+      <b>LAB</b>
     </div>
   </body>
 </html>
